--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -1,19 +1,25 @@
-{% load static %}
+
+
 <!doctype html>
+{% load static %}
+
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="generator" content="Hugo 0.88.1">
+    <link href="{%static 'bootstrap/css/bootstrap.min.css'%}" rel="stylesheet">
     <title>{% block title %}BASE{% endblock %}</title>
     {{ form.media }}
 
 
 
     <!-- Bootstrap core CSS -->
+
     {% load django_bootstrap5 %}
     {% bootstrap_css %}
+
 
 
 
